<resources>
    <string name="app_name">GarageSale</string>
    <string name="currency">€</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_username_missing_error">falta el usuario</string>
    <string name="login_password_missing_error">falta la contraseña</string>
    <string name="login_error">Login ha fallado.</string>

    <!-- Signup -->
    <string name="signup_prompt_text">Crea tu usuario</string>
    <string name="signup_username_hint">Usuario</string>
    <string name="signup_password_hint">Contraseña</string>
    <string name="signup_email_hint">Correo electrónico</string>
    <string name="signup_phone_hint">Telefono</string>
    <string name="signup_real_name_hint">Nombre y apellidos</string>
    <string name="signup_birth_date_hint">Fecha de nacimiento</string>
    <string name="signup_birth_date_format">dd.MM.yyyy</string>
    <string name="signup_nationality_default">Selecciona nacionalidad</string>
    <string name="signup_credit_card_hint">Tarjeta de crédito</string>
    <string name="signup_cc_validation_code_hint">CVC</string>
    <string name="signup_cc_month_format">MM</string>
    <string name="signup_cc_year_format">yy</string>
    <string name="signup_password_reenter_hint">Reintroducir contraseña</string>
    <string name="signup_create_account">Crear Cuenta</string>
    <string name="signup_creating_account_progress_message">Creando cuenta ...</string>
    <string name="signup_error">Alta ha fallado!</string>
    <string name="signup_short_username_error">3 caracteres como mínimo, letras, números y espacios</string>
    <string name="signup_username_taken_error">usuario ya existe</string>
    <string name="signup_password_length_error">entre 4 y 10 caracteres alfanuméricos</string>
    <string name="signup_password_mismatch_error">contraseñas no están idénticas</string>
    <string name="signup_invalid_entry">inválido</string>

    <string name="signup_username_validation_regex">[A-Za-z0-9 ]{3,}</string>
    <string name="signup_password_validation_regex">[0-9A-Za-z\u0080-\uffff]{4,10}</string>
    <string name="signup_mail_validation_regex">[a-zA-Z0-9._-]+@[a-zA-Z0-9_-]+\.[a-zA-Z]{2,4}</string>
    <string name="signup_real_name_validation_regex">([A-Za-z\u0080-\uffff]+)( [A-Za-z\u0080-\uffff]+)+</string>
    <string name="signup_credit_card_number_validation_regex">[0-9]{13,19}</string>
    <string name="signup_credit_card_cvc_regex">[0-9]{3,4}</string>


    <string name="action_settings">Settings</string>
    <string name="remaining_characters_count">(quedan %1$d characteres)</string>

    <!-- Creación de la oferta -->
    <string name="offer_creation_title_hint">¿Qué quieres vender? &#8230;</string>
    <string name="offer_creation_tags_hint">#unTag #otroTag &#8230; (separa por espacios)</string>
    <string name="offer_creation_description_hint">Cuéntanos un poco sobre el artículo. Menciona lo más importante primero! &#8230;</string>
    <string name="offer_condition_new">nuevo</string>
    <string name="offer_condition_nearly_new">casi nuevo</string>
    <string name="offer_condition_used">usado</string>
    <string name="offer_condition_defective">defecto</string>
    <string name="offer_location">%1$s, %2$s</string>
    <string name="offer_duration">%1$d días</string>
    <string name="hashtag_regex">#([\u0021-\u0022\u0024-\u007e\u00a1-\u02af]+)</string>

    <!-- Nombre de la actividad -->
    <string name="title_activity_login">Sign in</string>

    <!-- Actividades -->
    <string name="title_activity_update">Editar Oferta</string>
    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_insert">Insertar Nueva Oferta</string>

    <!-- Action Buttons -->
    <string name="action_delete">Borrar</string>
    <string name="action_discard">Descartar</string>
    <string name="action_edit">Editar</string>
    <string name="action_done">Guardar</string>

    <!-- Categorías -->
    <string-array name="entradas_categoria">
        <item>Salud</item>
        <item>Finanzas</item>
        <item>Espiritual</item>
        <item>Profesional</item>
        <item>Material</item>
    </string-array>

    <!-- Diálogos -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_discard_msg">¿Descartar Cambios?</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_delete_msg">Se eliminará la meta</string>

    <!-- Interacción con la BDD -->
    <string name="connection_problem">problema con la conexión</string>
</resources>





