<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/myDarkAqua">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/signup_prompt_text"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_username_hint"
                android:inputType="textShortMessage"
                android:maxLength="100"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_password_hint"
                android:inputType="textPassword"
                android:maxLength="100"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_real_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_real_name_hint"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="200"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_birth_date_hint"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/signup_phone_hint"
                android:inputType="textPersonName"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <!-- Name Label -->

        <!-- Password Label -->


        <!-- eMail Label -->


        <!-- Real Name Label -->


        <!--  Birth Date Label -->


        <!-- Nationality -->
        <Spinner
            android:id="@+id/spn_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/countries_es" />

        <!-- Credit Card Number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_credit_card_hint"
                android:inputType="number"
                android:maxLength="19"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/ll_credit_card_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <!-- Credit Card Validation Code -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_cc_validation_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_cc_validation_code_hint"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textColor="@color/monsoon" />
            </android.support.design.widget.TextInputLayout>

            <!-- Credit Card Validation Code -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_cc_end_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_cc_month_format"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/monsoon" />
            </android.support.design.widget.TextInputLayout>

            <!-- Credit Card Validation Code -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_cc_end_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_cc_year_format"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/monsoon" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_password_reenter_hint"
                android:inputType="textPassword"
                android:maxLength="100"
                android:textColor="@color/monsoon" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/mySalmon"
            android:padding="12dp"
            android:text="@string/signup_create_account"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="Ya tienes cuenta? Entra"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>